--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
+    "nodemailer": "^6.8.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
